namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-cluster
  labels:
    app: kafka
