kafdrop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
  labels:
    app: kafdrop
  namespace: kafka-cluster
  annotations:
    kubernetes.io/change-cause: "Deploying Kafdrop 3.31.0-SNAPSHOT"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
      - name: kafdrop
        image: docker.io/obsidiandynamics/kafdrop:3.31.0-SNAPSHOT
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: kafdrop-svc
  labels:
    app: kafdrop
  namespace: kafka-cluster
spec:
  type: ClusterIP
  selector:
    app: kafdrop
  ports:
  - port: 9000
    targetPort: 9000
