kafka-broker-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-svc
  labels:
    app: kafka-broker
  namespace: kafka-cluster
spec:
  type: ClusterIP
  selector:
    app: kafka-broker
  ports:
  - port: 9092
    targetPort: 9092
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-broker
  labels:
    app: kafka-broker
  namespace: kafka-cluster
  annotations:
    kubernetes.io/change-cause: "Deploying Kafka Broker Latest Version"
spec:
  serviceName: kafka-broker-svc
  replicas: 2
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      containers:
      - name: kafka
        image: docker.io/bitnami/kafka
        ports:
        - containerPort: 9092
        volumeMounts:
        - name: kafka-data
          mountPath: /kafka/kafka-logs
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - kafka-broker
              topologyKey: kubernetes.io/hostname
  volumeClaimTemplates:
  - metadata:
      name: kafka-data
    spec:
      storageClassName: nfs-client
      resources:
        requests:
          storage: 1Gi
      accessModes:
      - ReadWriteMany
