zookeeper-statefulset-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-svc1
  labels:
    app: zoo
  namespace: kafka-cluster
spec:
  type: ClusterIP
  selector: 
    app: zoo
  ports:
  - name: client
    port: 2181
  - name: follower
    port: 2888
  - name: leader
    port: 3888
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper1
  labels:
    app: zoo
  namespace: kafka-cluster
  annotations:
    kubernetes.io/change-cause: "Deploying Zookeeper 3.8.0-deb-11-r56"
spec:
  serviceName: zookeeper-svc1
  replicas: 1
  selector:
    matchLabels:
      app: zoo
  template:
    metadata:
      labels:
        app: zoo
    spec:
      nodeSelector:
        node: kafka1
      containers:
      - name: zookeeper
        image: docker.io/bitnami/zookeeper:3.8.0-debian-11-r56
        ports:
        - containerPort: 2181
        volumeMounts:
        - name: zookeeper-data
          mountPath: /var/lib/zookeeper
  volumeClaimTemplates:
  - metadata:
      name: zookeeper-data
    spec:
      storageClassName: nfs-client
      resources:
        requests:
          storage: 1Gi
      accessModes:
      - ReadWriteMany
