zookeeper-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-svc
  labels:
    app: zoo
  namespace: kafka-cluster
spec:
  type: ClusterIP
  selector: 
    app: zoo
  ports:
  - name: client
    port: 2181
  - name: follower
    port: 2888
  - name: leader
    port: 3888
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  labels:
    app: zoo
  namespace: kafka-cluster
  annotations:
    kubernetes.io/change-cause: "Deploying Zookeeper Latest Version"
spec:
  serviceName: zookeeper-svc
  replicas: 2
  selector:
    matchLabels:
      app: zoo
  template:
    metadata:
      labels:
        app: zoo
    spec:
      containers:
      - name: zookeeper
        image: docker.io/bitnami/zookeeper
        ports:
        - containerPort: 2181
        volumeMounts:
        - name: zookeeper-data
          mountPath: /var/lib/zookeeper
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution: 
          - weight: 100  
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - zoo
              topologyKey: kubernetes.io/hostname
  volumeClaimTemplates:
  - metadata:
      name: zookeeper-data
    spec:
      storageClassName: nfs-client
      resources:
        requests:
          storage: 1Gi
      accessModes:
      - ReadWriteMany
