kafdrop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: kafka-cluster
spec:
  rules:
  - host: kafdrop.local.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafdrop-svc
            port:
              number: 9000
